// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create it allows a user to create a safe 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 65%;
  -ms-flex: 0 0 65%;
  flex: 0 0 65%;
}

.c7 span.info,
.c7 span.error {
  font-size: 0.875rem;
}

.c7 span.error {
  color: var(--red-medium);
}

.c9 {
  vertical-align: middle;
}

.c1 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c1 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c1 > h2:first-child {
  margin: 0;
}

.c1 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c2 {
  background-color: var(--blue-gray);
}

.c2 hr {
  border-color: var(--gray-medium);
}

.c4 {
  background-color: var(--white);
  box-shadow: 0 0 0.5em var(--gray-light);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  margin: 1.5em 0;
}

.c14 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  position: relative;
  display: inline-block;
  background-color: var(--purple-medium);
  width: 3em;
  height: 3em;
  margin: 0;
}

.c3:after {
  position: absolute;
  display: block;
  content: '';
  top: 0;
  left: 0;
  background-color: var(--purple-dark);
  -webkit-animation-name: gxoozo;
  animation-name: gxoozo;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  width: calc(3em * 0.5);
  height: calc(3em * 0.5);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c5 > p,
.c5 > hr {
  margin: 0.5em 0;
}

.c5 > p[role='button'] {
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
  width: 100%;
  margin: 0 auto;
  max-width: 40em;
}

.c0 form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  line-height: 1.3;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
  pointer-events: none;
  color: var(--gray-medium);
  border-color: var(--gray-medium);
  background: transparent;
}

.c16 svg path {
  stroke: var(--black);
}

.c16:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c16:hover svg path {
  stroke: var(--purple-medium);
}

.c16:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c16:active svg path {
  stroke: var(--white) !important;
}

.c16 svg path {
  stroke: var(--white);
}

.c16:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c16:hover svg path {
  stroke: var(--green-medium);
}

.c16 svg path {
  stroke: var(--gray-medium);
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  line-height: 1.3;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  pointer-events: none;
  color: var(--gray-medium);
  border-color: var(--gray-medium);
  background: transparent;
}

.c15 svg path {
  stroke: var(--black);
}

.c15:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c15:hover svg path {
  stroke: var(--purple-medium);
}

.c15:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c15:active svg path {
  stroke: var(--white) !important;
}

.c15 svg path {
  stroke: var(--gray-medium);
}

.c8 .suffix-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c8 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c8 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c8 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c8 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c8 .unit-wrapper {
  position: relative;
}

.c8 .unit-wrapper input {
  width: 100%;
}

.c8 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
  color: var(--gray-dark) !important;
}

.c10 .select-wrapper {
  position: relative;
}

.c10 .select-wrapper select {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c10 .select-wrapper .select-arrow {
  position: absolute;
  pointer-events: none;
  top: 50%;
  right: 1.2em;
  width: 0.6em;
  height: 0.6em;
  border-right: 1.5px solid var(--black);
  border-bottom: 1.5px solid var(--black);
  -webkit-transform: translateY(-0.35em) rotate(45deg);
  -ms-transform: translateY(-0.35em) rotate(45deg);
  transform: translateY(-0.35em) rotate(45deg);
  border-color: var(--gray-dark);
}

.c11 .toggle-wrapper {
  position: relative;
}

.c11 input {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 0;
  height: 0;
  opacity: 0;
}

.c11 .toggle {
  display: inline-block;
  position: relative;
  width: 2.25em;
  height: 1.5em;
  border-radius: 0.75em;
  border: 2px solid var(--blue-medium);
  background-color: var(--blue-medium);
  border-color: var(--gray-light) !important;
  background-color: var(--gray-light) !important;
}

.c11 .toggle::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: calc(1.5em - 4px);
  height: calc(1.5em - 4px);
  border-radius: 50%;
  background-color: var(--white);
}

.c11 input:checked ~ .toggle {
  border-color: var(--blue-dark);
  background-color: var(--blue-dark);
}

.c11 input:checked ~ .toggle::after {
  left: auto;
  right: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: var(--space-l);
}

.c6 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c6 > *:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 span {
  color: var(--purple-medium);
  font-size: 1.75rem;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 c2"
    >
      <h2>
        Create Safe
      </h2>
      <hr />
      <p>
        Sending your transaction...
      </p>
      <span
        class="c3"
      />
    </div>
    
    <div
      class="c1 c4"
    >
      <div
        class="c5"
      >
        <header
          class="c6"
        >
          <div>
            <span>
              From
            </span>
            <span>
              t1z225 ... 6z6wgi
            </span>
          </div>
          <div>
            <span>
              Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
        </header>
        <label
          class="c7 c8"
          disabled=""
        >
          <div>
            <span>
              Signer 1 (you)
            </span>
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  disabled=""
                  max=""
                  min=""
                  name=""
                  placeholder="f1..."
                  step="any"
                  style="padding-right: 1em;"
                  type="text"
                  value="t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                />
                
              </div>
            </div>
          </div>
        </label>
        <label
          class="c7 c8"
          disabled=""
        >
          <div>
            <span>
              Signer 2
            </span>
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  disabled=""
                  max=""
                  min=""
                  name=""
                  placeholder="f1..."
                  step="any"
                  style="padding-right: 1em;"
                  type="text"
                  value="t1iuryu3ke2hewrcxp4ezhmr5cmfeq3wjhpxaucza"
                />
                
              </div>
              <svg
                class="c9 has-fill"
                clip-rule="evenodd"
                fill="var(--purple-medium)"
                fill-rule="evenodd"
                height="1em"
                viewBox="4 4 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
                />
              </svg>
            </div>
          </div>
        </label>
        <label
          class="c7 c8"
          disabled=""
        >
          <div>
            
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  disabled=""
                  max=""
                  min=""
                  name=""
                  placeholder=""
                  step="any"
                  style="padding-right: 1em;"
                  type="button"
                  value="Add Signer"
                />
                
              </div>
            </div>
          </div>
        </label>
        <label
          class="c7 c10"
          disabled=""
        >
          <div>
            <span>
              Required Approvals
            </span>
            <span
              class="info"
            >
              The Safe will have 2 owners
            </span>
          </div>
          <div
            class="select-wrapper"
          >
            <select
              disabled=""
            >
              
              <option
                value="1"
              >
                1
              </option>
              <option
                value="2"
              >
                2
              </option>
            </select>
            <div
              class="select-arrow"
            />
          </div>
        </label>
        <label
          class="c7 c8"
          disabled=""
        >
          <div>
            <span>
              Deposit Amount
            </span>
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  disabled=""
                  max="1"
                  min="0"
                  name=""
                  placeholder=""
                  step="any"
                  style="padding-right: 3.25em;"
                  type="number"
                  value="0.01"
                />
                <span
                  class="unit"
                >
                  FIL
                </span>
              </div>
            </div>
          </div>
        </label>
        <label
          class="c7 c8"
          disabled=""
        >
          <div>
            <span>
              Vest (# blocks)
            </span>
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  disabled=""
                  max=""
                  min="0"
                  name=""
                  placeholder=""
                  step="any"
                  style="padding-right: 1em;"
                  type="number"
                  value="0"
                />
                
              </div>
            </div>
          </div>
        </label>
        <hr />
        <label
          class="c7 c11"
          disabled=""
        >
          <div>
            <span>
              Expert Mode
            </span>
            
          </div>
          <div
            class="toggle-wrapper"
          >
            <input
              disabled=""
              type="checkbox"
            />
            <span
              class="toggle"
            />
          </div>
        </label>
        <p>
          You will not pay more than 
          0.00000000001
           FIL for this transaction.
           
          <a
            href="https://filfox.info/en/stats/gas"
            rel="noreferrer noopener"
            target="_blank"
          >
            More information on average gas fee statistics.
          </a>
        </p>
        <hr />
        <div
          class="c12"
        >
          <span>
            Total
          </span>
          <span>
            0.01000000001
             FIL
          </span>
        </div>
      </div>
    </div>
    <div
      class="c13 c14"
    >
      <button
        class="c15"
        disabled=""
        type="button"
      >
        Back
      </button>
      <button
        class="c16"
        disabled=""
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`Create it renders the initial state correctly 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 65%;
  -ms-flex: 0 0 65%;
  flex: 0 0 65%;
}

.c6 span.info,
.c6 span.error {
  font-size: 0.875rem;
}

.c6 span.error {
  color: var(--red-medium);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 65%;
  -ms-flex: 0 0 65%;
  flex: 0 0 65%;
}

.c8 span.info,
.c8 span.error {
  font-size: 0.875rem;
}

.c8 span.error {
  color: var(--red-medium);
}

.c1 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c1 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c1 > h2:first-child {
  margin: 0;
}

.c1 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c2 {
  background-color: var(--blue-gray);
}

.c2 hr {
  border-color: var(--gray-medium);
}

.c3 {
  background-color: var(--white);
  box-shadow: 0 0 0.5em var(--gray-light);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  margin: 1.5em 0;
}

.c12 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c4 > p,
.c4 > hr {
  margin: 0.5em 0;
}

.c4 > p[role='button'] {
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
  width: 100%;
  margin: 0 auto;
  max-width: 40em;
}

.c0 form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  line-height: 1.3;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
}

.c13 svg path {
  stroke: var(--black);
}

.c13:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c13:hover svg path {
  stroke: var(--purple-medium);
}

.c13:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c13:active svg path {
  stroke: var(--white) !important;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  line-height: 1.3;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
  pointer-events: none;
  color: var(--gray-medium);
  border-color: var(--gray-medium);
  background: transparent;
}

.c14 svg path {
  stroke: var(--black);
}

.c14:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c14:hover svg path {
  stroke: var(--purple-medium);
}

.c14:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c14:active svg path {
  stroke: var(--white) !important;
}

.c14 svg path {
  stroke: var(--white);
}

.c14:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c14:hover svg path {
  stroke: var(--green-medium);
}

.c14 svg path {
  stroke: var(--gray-medium);
}

.c7 .suffix-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c7 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c7 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c7 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c7 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c7 .unit-wrapper {
  position: relative;
}

.c7 .unit-wrapper input {
  width: 100%;
}

.c7 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
  color: var(--gray-dark) !important;
}

.c9 .suffix-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c9 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c9 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c9 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c9 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c9 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c9 .unit-wrapper {
  position: relative;
}

.c9 .unit-wrapper input {
  width: 100%;
}

.c9 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
}

.c10 .select-wrapper {
  position: relative;
}

.c10 .select-wrapper select {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c10 .select-wrapper .select-arrow {
  position: absolute;
  pointer-events: none;
  top: 50%;
  right: 1.2em;
  width: 0.6em;
  height: 0.6em;
  border-right: 1.5px solid var(--black);
  border-bottom: 1.5px solid var(--black);
  -webkit-transform: translateY(-0.35em) rotate(45deg);
  -ms-transform: translateY(-0.35em) rotate(45deg);
  transform: translateY(-0.35em) rotate(45deg);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: var(--space-l);
}

.c5 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 > *:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 c2"
    >
      <h2>
        Create Safe
      </h2>
      <hr />
      <p>
        Please enter the details for your new Safe below
      </p>
    </div>
    
    <div
      class="c1 c3"
    >
      <div
        class="c4"
      >
        <header
          class="c5"
        >
          <div>
            <span>
              From
            </span>
            <span>
              t1z225 ... 6z6wgi
            </span>
          </div>
          <div>
            <span>
              Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
        </header>
        <label
          class="c6 c7"
          disabled=""
        >
          <div>
            <span>
              Signer 1 (you)
            </span>
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  disabled=""
                  max=""
                  min=""
                  name=""
                  placeholder="f1..."
                  step="any"
                  style="padding-right: 1em;"
                  type="text"
                  value="t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                />
                
              </div>
            </div>
          </div>
        </label>
        <label
          class="c8 c9"
        >
          <div>
            
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  max=""
                  min=""
                  name=""
                  placeholder=""
                  step="any"
                  style="padding-right: 1em;"
                  type="button"
                  value="Add Signer"
                />
                
              </div>
            </div>
          </div>
        </label>
        <label
          class="c8 c10"
        >
          <div>
            <span>
              Required Approvals
            </span>
            <span
              class="info"
            >
              The Safe will have 1 owner
            </span>
          </div>
          <div
            class="select-wrapper"
          >
            <select>
              
              <option
                value="1"
              >
                1
              </option>
            </select>
            <div
              class="select-arrow"
            />
          </div>
        </label>
        <label
          class="c8 c9"
        >
          <div>
            <span>
              Deposit Amount
            </span>
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  max="1"
                  min="0"
                  name=""
                  placeholder=""
                  step="any"
                  style="padding-right: 3.25em;"
                  type="number"
                  value=""
                />
                <span
                  class="unit"
                >
                  FIL
                </span>
              </div>
            </div>
          </div>
        </label>
        <label
          class="c8 c9"
        >
          <div>
            <span>
              Vest (# blocks)
            </span>
            
            
          </div>
          <div
            class="suffix-wrapper"
          >
            <div
              class="button-wrapper"
            >
              <div
                class="unit-wrapper"
              >
                <input
                  autocomplete="on"
                  class=""
                  max=""
                  min="0"
                  name=""
                  placeholder=""
                  step="any"
                  style="padding-right: 1em;"
                  type="number"
                  value="0"
                />
                
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      class="c11 c12"
    >
      <button
        class="c13"
        type="button"
      >
        Cancel
      </button>
      <button
        class="c14"
        disabled=""
        type="submit"
      >
        Review
      </button>
    </div>
  </form>
</div>
`;
